fixed navpagelinks so they make the mobile menu invisible when clicked

--- a/src/Components/PageElements/VideoSection/VideoSection.css
+++ b/src/Components/PageElements/VideoSection/VideoSection.css
@@ -9,6 +9,7 @@
     min-height: 530px;
     height: 20em;
     overflow-x: hidden;
+    max-width: 90em;
 }
 
 .video-flexitem {
